[package]
name = "once_cell"
version = "1.17.2"
authors = ["jijothic <jijothic@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2023"
rust-version = "1.56"

description = "Send message (once session started) on msg91."
readme = "README.md"

[dependencies]
reqwest = "0.11.1"
tokio = { version = "1", features = ["full"] }